Fixed placement of items on small screens

--- a/week3/css/style.css
+++ b/week3/css/style.css
@@ -55,6 +55,27 @@ body {
 }
 /* END HEADER */
 
+/* FOOTER */
+.card-footer {
+  margin-top: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  background-color: #090513;
+}
+.card-footer div.row {
+  margin-bottom: 35px;
+}
+#footer-names {
+  line-height: 1.8;
+}
+#footer-info span, #footer-names span {
+  font-size: 1.3em;
+}
+#footer-quotes {
+  font-style: italic;
+}
+/* END FOOTER */
+
 /* HOME PAGE */
 #my-love-tile, #magic-tile, #map-tile {
   height: 250px;
@@ -147,18 +168,18 @@ body {
   font-size: 1.1em;
   text-align: right;
   margin-top: -15px;
-  margin-right: -15px;
+  margin-right: -10px;
 }
 
 .potion-item-photo {
   position: relative;
-  /* border: 2px solid black;  */
+  border: 2px solid black; 
   overflow: hidden;
   padding: 0;
-  margin-right: -15px;
+  margin-right: -10px;
   margin-left: auto;
   margin-bottom: 20px;
-  /* max-width: 250px; */
+  max-width: 250px; 
 }
 .potion-item-description {
   padding-right: 30px;
@@ -173,23 +194,28 @@ h3.potion-item-title {
 
 /* END MAGIC CATEGORY PAGE */
 
-/* FOOTER */
-.card-footer {
-  margin-top: 30px;
-  padding-top: 20px;
-  padding-bottom: 30px;
-  background-color: #090513;
+/********** Extra small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  /* MAGIC-CATEGORY */
+  .potion-item-photo {
+    margin-right: auto;
+  }
+  .potion-item-tile .potion-item-price {
+    text-align: center;
+  }
+  /* End MAGIC-CATEGORY */
 }
-.card-footer div.row {
-  margin-bottom: 35px;
+
+@media (max-width: 767px) {
+  /* MAGIC-CATEGORY */
+  .potion-item-photo {
+    margin-right: auto;
+  }
+  .potion-item-tile .potion-item-price {
+    text-align: center;
+  }
+  .potion-item-description {
+    margin-top: 20px;
+  }
+  /* End MAGIC-CATEGORY */
 }
-#footer-names {
-  line-height: 1.8;
-}
-#footer-info span, #footer-names span {
-  font-size: 1.3em;
-}
-#footer-quotes {
-  font-style: italic;
-}
-/* END FOOTER */
